--- a/Front-End_Mentor/Landing-Page/css/style.css
+++ b/Front-End_Mentor/Landing-Page/css/style.css
@@ -104,6 +104,28 @@ footer {
     display: none;
 }
 
-@media screen and (min-width: ){
-
+@media screen and (min-width: 768px){
+    nav a {
+        width: 25%;
+        height: auto;
+    }
+    .container_central{
+        width: 90%;
+        align-items: center;
+        flex-direction: row;
+        margin: 0 auto;
+    }
+    .container_central img{
+        width: 40%;
+        height: auto;
+        margin-right: 25px;
+    }
+    .text{
+        margin-left: 25px;
+        width: 40%;
+        align-items: center;
+    }
+    .social_networks{
+        justify-content: flex-end;
+    }
 }
