add new exercices

--- a/Front-End_Mentor/FAQ_Card/css/style.css
+++ b/Front-End_Mentor/FAQ_Card/css/style.css
@@ -9,7 +9,7 @@ body{
 
 .container_faq{
     margin: 0 auto;
-    margin-top: 250px;
+    margin-top: 45%;
     background-color: #FFFFFF;
     border-radius: 25px;
     width: 90%;
