--- a/Portfolio/css/scss/_homepage.scss
+++ b/Portfolio/css/scss/_homepage.scss
@@ -18,7 +18,6 @@ header{
     justify-content: center;
   }
   h1{
-    width: 50%;
     text-align: center;
     color: $dark_grey;
     font-family: "Italic";
@@ -59,7 +58,7 @@ nav{
 
 
 
-@media screen and (min-width: 1200px){
+/*@media screen and (min-width: 1200px){
   nav{
     display: flex;
     flex-direction: row;
@@ -124,4 +123,4 @@ nav{
       }
     }
   }
-}
+}*/
