--- a/Portfolio/css/style.css
+++ b/Portfolio/css/style.css
@@ -1,1 +1,263 @@
-@font-face{font-family:"Bold";src:url("../font/Bold.ttf") format("ttf")}@font-face{font-family:"Italic";src:url("../font/Italic.ttf") format("ttf")}@font-face{font-family:"Regular";src:url("../font/Regular.ttf") format("ttf")}html,body{height:100%;background-color:#259cb8}header{background-image:url("../images/fond.jpg");height:100%;background-position:center;background-repeat:no-repeat;background-size:cover;padding:10px;display:flex;flex-direction:column;justify-content:space-between}header .header_title{display:flex;justify-content:center}header h1{text-align:center;color:#33464d;font-family:"Italic";font-size:2.5em}header .scroll_icon{display:flex;justify-content:center;padding-bottom:50px}nav{display:flex;flex-direction:row;justify-content:space-between}nav p{width:100px;font-size:1.5em;font-family:"Italic"}nav ul{display:none}nav svg{fill:#33464d}.reseaux_sociaux{display:none}.presentation_container{display:flex;flex-direction:column;align-items:center;justify-content:center}.presentation_container .presentation{display:flex;flex-direction:column;align-items:center;width:100%}.presentation_container .competences{display:flex;flex-direction:column;align-items:center}.presentation_image{display:flex;flex-direction:column;justify-content:flex-start;align-items:center;width:100%;height:150px;background-image:url("../icons/texture.svg");padding-top:25px;margin-bottom:100px}.presentation_image h2{font-size:1.8em;color:#fff}.presentation_image img{width:150px;height:auto;border-radius:200px}
+@charset "UTF-8";
+/*Déclaration des couleurs*/
+/*FIN Déclaration des couleurs*/
+/*Déclaration des polices*/
+@font-face {
+  font-family: "Bold";
+  src: url("../font/Bold.ttf") format("ttf");
+}
+
+@font-face {
+  font-family: "Italic";
+  src: url("../font/Italic.ttf") format("ttf");
+}
+
+@font-face {
+  font-family: "Regular";
+  src: url("../font/Regular.ttf") format("ttf");
+}
+
+/*FIN Déclaration des polices*/
+/*Déclaration des mixins*/
+/*FIN Déclaration des mixins*/
+html, body {
+  height: 100%;
+  background-color: #259cb8;
+}
+
+header {
+  background-image: url("../images/fond.jpg");
+  height: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+header .header_title {
+  display: flex;
+  justify-content: center;
+}
+
+header h1 {
+  text-align: center;
+  color: #33464d;
+  font-family: "Italic";
+  font-size: 2.5em;
+}
+
+header .scroll_icon {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 50px;
+}
+
+nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+nav p {
+  width: 100px;
+  font-size: 1.5em;
+  font-family: "Italic";
+}
+
+nav ul {
+  display: none;
+}
+
+nav svg {
+  fill: #33464d;
+}
+
+.reseaux_sociaux {
+  display: none;
+}
+
+/*@media screen and (min-width: 1200px){
+  nav{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    p{
+      font-family: "Libre Baskerville Italic";
+      color: $dark_grey;
+    }
+    ul{
+      background-color: $dark_grey;
+      width: 60%;
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+    }
+  }
+
+  li{
+    list-style: none;
+    width: 20%;
+    margin: 2.5%;
+    a{
+      font-family: "Libre Baskerville Italic";
+      color: $white;
+    }
+  }
+
+  .reseaux_sociaux{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: fixed;
+    top: 40%;
+    right: 25px;
+    background-color: $light_grey;
+    width: 55px;
+    padding-top: 10px;
+    border-radius: 10px;
+    a{
+      height: 45px;
+      width: 45px;
+      margin-bottom: 10px;
+      text-decoration: none;
+      p{
+        display: none;
+      }
+    }
+    a:hover{
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+      right: 0;
+      height: 55px;
+      width: 125px;
+      margin-bottom: 0;
+      background-color: $blue;
+      p{
+        display: block;
+        font-size: 1.5em;
+        color: $white;
+      }
+    }
+  }
+}*/
+.body_container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.presentation_container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 75px;
+}
+
+.presentation_container .presentation {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  margin-bottom: 50px;
+}
+
+.presentation_container .competences {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 80%;
+}
+
+.presentation_image {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  width: 100%;
+  height: 150px;
+  background-image: url("../icons/texture.svg");
+  padding-top: 25px;
+  margin-bottom: 100px;
+}
+
+.presentation_image h2 {
+  font-size: 1.8em;
+  color: #ffffff;
+}
+
+.presentation_image img {
+  width: 150px;
+  height: auto;
+  border-radius: 200px;
+}
+
+.presentation_text {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 80%;
+}
+
+.presentation_text p {
+  text-align: center;
+}
+
+.competences {
+  background-color: #33464d;
+  border-radius: 25px;
+  padding: 10px;
+}
+
+.formation {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 80%;
+  border-radius: 25px;
+  background-color: #ffffff;
+  margin-bottom: 75px;
+}
+
+.formation .formation_card {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  margin: 25px;
+  padding: 15px;
+  width: 80%;
+  background-color: #33464d;
+  border-radius: 25px;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #ffffff;
+  border-radius: 25px;
+  width: 80%;
+}
+
+.form form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+input {
+  border-radius: 25px;
+  width: 100%;
+}
