--- a/Portfolio/css/scss/_form.scss
+++ b/Portfolio/css/scss/_form.scss
@@ -6,8 +6,9 @@
   background-color: $white;
   border-radius: 25px;
   width: 80%;
-
+  height: 525px;
   form{
+    width: 70%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -15,7 +16,21 @@
   }
 }
 
-input{
-  border-radius: 25px;
-  width: 100%;
+form{
+  input{
+    padding-left: 10px;
+    border-radius: 25px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    width: 100%;
+    height: 50px;
+  }
+  button{
+    width: 60%;
+    border-radius: 30px;
+    background-color: $blue;
+    border: none;
+    height: 50px;
+    margin-top: 10px;
+  }
 }
