--- a/Portfolio/css/scss/_formations.scss
+++ b/Portfolio/css/scss/_formations.scss
@@ -6,15 +6,16 @@
   width: 80%;
   border-radius: 25px;
   background-color: $white;
+  padding-bottom: 25px;
   margin-bottom: 75px;
   .formation_card{
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
-    margin: 25px;
+    margin: 12px;
     padding: 15px;
-    width: 80%;
+    width: 90%;
     background-color: $dark_grey;
     border-radius: 25px;
   }
