--- a/Portfolio/css/scss/_presentation.scss
+++ b/Portfolio/css/scss/_presentation.scss
@@ -37,7 +37,7 @@
   align-items: center;
   width: 100%;
   height: 150px;
-  background-image: url("../icons/texture.svg");
+  background-image: url("../icons/Texture.svg");
   padding-top: 25px;
   margin-bottom: 100px;
   h2{
