--- a/Portfolio/css/style.css
+++ b/Portfolio/css/style.css
@@ -185,7 +185,7 @@ nav svg {
   align-items: center;
   width: 100%;
   height: 150px;
-  background-image: url("../icons/texture.svg");
+  background-image: url("../icons/Texture.svg");
   padding-top: 25px;
   margin-bottom: 100px;
 }
