--- a/Portfolio/css/scss/style.scss
+++ b/Portfolio/css/scss/style.scss
@@ -1,1 +1,1 @@
-@import "variable", "homepage", "presentation", "competences", "formations","form";
+@import "variable", "homepage", "presentation", "competences", "formations","form","footer";
