--- a/Portfolio/css/style.css
+++ b/Portfolio/css/style.css
@@ -252,6 +252,7 @@ nav svg {
   border-radius: 25px;
   width: 80%;
   height: 525px;
+  margin-bottom: 50px;
 }
 
 .form form {
@@ -278,4 +279,38 @@ form button {
   border: none;
   height: 50px;
   margin-top: 10px;
+}
+
+footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  background-color: #ffffff;
+}
+
+footer .footer_infos {
+  width: 100%;
+  height: 100px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+footer .footer_icons {
+  width: 100%;
+  height: 50px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: flex-end;
+}
+
+.footer_infos div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
