--- a/Portfolio/css/scss/_footer.scss
+++ b/Portfolio/css/scss/_footer.scss
@@ -26,9 +26,10 @@ footer{
 
 .footer_infos{
   div{
-   display: flex;
+    display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    width: 40%;
   }
 }
