--- a/Portfolio/css/style.css
+++ b/Portfolio/css/style.css
@@ -236,47 +236,6 @@ nav svg {
   margin-bottom: 50px;
 }
 
-.flip-card {
-  background-color: transparent;
-  width: 300px;
-  height: 300px;
-  margin-bottom: 50px;
-  perspective: 1000px;
-}
-
-.flip-card-inner {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  transition: transform 0.6s;
-  transform-style: preserve-3d;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-}
-
-.flip-card:hover .flip-card-inner {
-  transform: rotateY(180deg);
-}
-
-.flip-card-front, .flip-card-back {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-}
-
-.flip-card-front {
-  background-color: #bbb;
-  color: black;
-}
-
-.flip-card-back {
-  background-color: #2980b9;
-  color: white;
-  transform: rotateY(180deg);
-}
-
 section {
   background: #F4F4F4;
   padding: 50px 0;
@@ -569,22 +528,36 @@ p {
 }
 
 /* Property Cards Hover States */
-.property-card:hover .property-description {
+.property-card:active .property-description {
   height: 0em;
   padding: 0px 1em;
 }
 
-.property-card:hover .property-image {
+.property-card:active .property-image {
   height: 18em;
 }
 
-.property-card:hover .property-social-icons {
+.property-card:active .property-social-icons {
   background-color: white;
 }
 
-.property-card:hover .property-social-icons:hover {
+.property-card:active .property-social-icons:active {
   background-color: blue;
   cursor: pointer;
+}
+
+.property-image-title {
+  text-align: center;
+  position: Relative;
+  top: 30%;
+  opacity: 0;
+  transition: all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1) 0.2s;
+  color: black;
+  font-size: 1.2em;
+}
+
+.property-card:active .property-image-title {
+  opacity: 1;
 }
 
 .formation {
