--- a/Portfolio/css/scss/_realisations.scss
+++ b/Portfolio/css/scss/_realisations.scss
@@ -212,8 +212,8 @@ p
 
 .center
 {
-  height:100vh;
-  width:100%;
+  height: 450px;
+  width:90%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -223,8 +223,8 @@ p
 
 .property-card
 {
-  height:18em;
-  width:14em;
+  height:100%;
+  width:100%;
   display:-webkit-box;
   display:-ms-flexbox;
   display:flex;
@@ -238,8 +238,6 @@ p
   transition:all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
   border-radius:16px;
   overflow:hidden;
-  -webkit-box-shadow:  15px 15px 27px #e1e1e3, -15px -15px 27px #ffffff;
-  box-shadow:  15px 15px 27px #e1e1e3, -15px -15px 27px #ffffff;
 }
 /* ^-- The margin bottom is necessary for the drop shadow otherwise it gets clipped in certain cases. */
 
@@ -247,15 +245,15 @@ p
 
 .property-image
 {
-  height:6em;
-  width:14em;
+  height:33%;
+  width:100%;
   padding:1em 2em;
   position:Absolute;
   top:0px;
   -webkit-transition:all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
   -o-transition:all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
   transition:all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
-  background-image:url('https://cdn.photographylife.com/wp-content/uploads/2017/01/What-is-landscape-photography.jpg');
+  background-image:url('../images/projetSWM.png');
   background-size:cover;
   background-repeat:no-repeat;
 }
@@ -265,8 +263,8 @@ p
 .property-description
 {
   background-color: #FAFAFC;
-  height:12em;
-  width:14em;
+  height:66%;
+  width:100%;
   position:absolute;
   bottom:0em;
   -webkit-transition:all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
@@ -282,10 +280,10 @@ p
 {
   width:1em;
   height:1em;
-  background-color:black;
+  background-color: black;
   position:absolute;
-  bottom:1em;
-  left:1em;
+  bottom:5%;
+  left:5%;
   -webkit-transition:all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
   -o-transition:all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
   transition:all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
@@ -300,7 +298,7 @@ p
 }
 .property-card:hover .property-image
 {
-  height:18em;
+  height:100%;
 }
 
 .property-card:hover .property-social-icons
