--- a/Integration/ClassroomGarden/MIW - Classroom_files/scss/_teacher.scss
+++ b/Integration/ClassroomGarden/MIW - Classroom_files/scss/_teacher.scss
@@ -4,11 +4,16 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-bottom: 100px;
+  margin-bottom: 15px;
+  width: 100%;
+  .wrapper{
+    width: 100%;
+  }
 }
 
 .teachers{
   margin-top: 50px;
+  width: 100%;
   h2{
     text-align: center;
     color: $dark_blue;
@@ -21,11 +26,17 @@
     justify-content: center;
     align-items: center;
     flex-wrap: nowrap;
+    overflow-x: scroll;
+    scroll-snap-type: x mandatory;
     >li{
+      flex: 1 0 300px;
+      margin-left: 1rem;
+      scroll-snap-align: start;
       width: 300px;
       height: 300px;
       border-radius: 50%;
       margin-right: 25px;
+      background: linear-gradient(to bottom, transparent 70%, $pink 30%);
       img{
         border-radius: 50%;
         width: 100%;
@@ -36,7 +47,8 @@
       h4{
         position: relative;
         top: -75px;
-        left: 35%;
+        left: 100px;
+        //left: 35%;
         z-index: 2;
       }
 
@@ -50,10 +62,26 @@
   justify-content: center;
   align-items: center;
   position: relative;
-  top: -75px;
+  top: -85px;
+  left: -15px;
   z-index: 2;
   li{
-    margin-right: 10px;
+    height: 25px;
+    width: 25px;
+  }
+  li:last-child{
+    margin-left: 10px;
+  }
+  a{
+    font-size: 0;
+    padding-top: 25px;
+    padding-left: 25px;
+  }
+  li:first-child{
+    background-image: url("linkedin.svg");//ajouter url linkedin
+  }
+  li:last-child{
+    background-image: url("github.svg");//ajouter url github
   }
 }
 .teaching{
@@ -62,7 +90,8 @@
   justify-content: center;
   align-items: center;
   position: relative;
-  top: -75px;
+  top: -85px;
+  left: -15px;
   z-index: 2;
   li{
     margin-right: 10px;
