--- a/Integration/ClassroomGarden/MIW - Classroom_files/scss/_footer.scss
+++ b/Integration/ClassroomGarden/MIW - Classroom_files/scss/_footer.scss
@@ -4,12 +4,73 @@
   background-repeat: no-repeat;
   background-size: 115%;
   background-position-x: -59px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   .miw_contact{
-    width: 100%;
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    h4{
+      text-align: center;
+      color: $white;
+    }
+    ul{
+      width: 100%;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-evenly;
+      span{
+        display: none;
+      }
+      li{
+        height: 25px;
+        width: 25px;
+        margin-right: 10px;
+      }
+      a{
+        font-size: 0;
+        padding-top: 25px;
+        padding-left: 25px;
+      }
+      li:first-child{
+        display: none;
+        background-image: url("position.svg");//ajouter url linkedin
+      }
+      li:nth-child(2){
+        background-image: url("tel.svg");//ajouter url linkedin
+      }
+      li:nth-child(3){
+        background-image: url("email.svg");//ajouter url linkedin
+      }
+      li:nth-child(4){
+        background-image: url("website.svg");//ajouter url linkedin
+      }
+      li:nth-child(5){
+        background-image: url("facebook.svg");//ajouter url linkedin
+      }
+      li:nth-child(6){
+         background-image: url("github.svg");//ajouter url linkedin
+       }
+    }
   }
   .outro{
-    width: 100%;
-    padding-top: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 90%;
+    padding-top: 100px;
+    p{
+      color: $white;
+    }
+    a{
+      color: darkgrey;
+    }
   }
 }
 .label:nth-child(5){
