--- a/Integration/ClassroomGarden/MIW - Classroom_files/scss/_students.scss
+++ b/Integration/ClassroomGarden/MIW - Classroom_files/scss/_students.scss
@@ -70,7 +70,25 @@
   }
 }
 // Medium devices (tablets, 768px and up)
-@media (min-width: 768px) {  }
+@media (min-width: 768px) {
+  .classroom{
+    h2{
+      background-image: url("fond_students_desktop.svg");
+      height: 300px;
+      padding: 100px;
+    }
+    ul{
+      width: 75%;
+      flex-direction: row;
+      flex-wrap: wrap;
+    }
+    li{
+      width: 50%;
+      margin-bottom: 100px;
+      height: 400px;
+    }
+  }
+}
 
 // Large devices (desktops, 992px and up)
 @media (min-width: 992px) {
@@ -93,6 +111,3 @@
   }
 }
 
-
-// Extra large devices (large desktops, 1200px and up)
-@media (min-width: 1200px) {}
