--- a/Integration/ClassroomGarden/MIW - Classroom_files/scss/_teacher.scss
+++ b/Integration/ClassroomGarden/MIW - Classroom_files/scss/_teacher.scss
@@ -6,8 +6,9 @@
   justify-content: center;
   margin-bottom: 15px;
   width: 100%;
+  height: 100%;
   .wrapper{
-    width: 100%;
+    height: 100%;
   }
 }
 
@@ -100,3 +101,11 @@
   }
 }
 
+@media (min-width: 768px) {
+
+}
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) {
+
+}
