--- a/Integration/ClassroomGarden/MIW - Classroom_files/scss/style.scss
+++ b/Integration/ClassroomGarden/MIW - Classroom_files/scss/style.scss
@@ -1,1 +1,1 @@
-@import "reset", "var", "header", "teacher", "button", "students", "promoPrec", "footer";
+@import "reset", "var", "header", "teacher", "button", "students", "promoPrec", "footer", "print";
