debut integration miw weather

--- a/Integration/MIW-Weather/css/scss/_header.scss
+++ b/Integration/MIW-Weather/css/scss/_header.scss
@@ -87,8 +87,7 @@ h1 + svg{
 }
 
 h2{
-  direction: rtl;
-  text-align: start;
+  width: 80%;
   color: $dark_blue;
   font-size: 30px;
   font-family: Poppins;
