--- a/Integration/MIW-Weather/css/scss/_carte.scss
+++ b/Integration/MIW-Weather/css/scss/_carte.scss
@@ -1,11 +1,9 @@
 
 
 .carte{
-  position: relative;
-  top: -100px;
   z-index: 0;
   width : 100%;
   height : 100vh;
-  margin-left: auto;
-  margin-right: auto
+  margin: 0;
+  padding: 0;
 }
