--- a/Integration/MIW-Weather/css/scss/_nav.scss
+++ b/Integration/MIW-Weather/css/scss/_nav.scss
@@ -1,40 +1,20 @@
 nav{
+  position: absolute;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
   z-index: 1;
+  width: 80%;
+  margin-top: 25px;
+  margin-left: 10vw;
   .nav_gauche{
     z-index: 1;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    width: 100%;
   }
-}
-
-.zoom{
-  z-index: 1;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  position: relative;
-  top: +85vh;
-  button{
-    width: 50px;
-    height: 50px;
-    background-color: $dark_blue;
-    border: 0;
-    border-radius: 50px;
-    p{
-      line-height: 50px;
-      color: $orange;
-      font-family: Poppins;
-      font-size: 25px;
-    }
-  }
-
 }
 
 .search{
@@ -47,6 +27,7 @@ nav{
     border: 2px solid $dark_blue;
     border-radius: 50px;
     padding-left: 15px;
+    margin-left: 10px;
   }
   button{
     position: relative;
@@ -69,6 +50,38 @@ nav{
   border-radius: 50px;
 }
 
+
 .nav_droite{
   display: none;
+}
+
+
+// Small devices (landscape phones, 576px and up)
+@media (min-width: 576px) {
+
+}
+
+// Medium devices (tablets, 768px and up)
+@media (min-width: 768px) {
+nav{
+  margin-left: 15vw;
+}
+  .search{
+    input{
+      width: 450px;
+    }
+  }
+
+}
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) {
+  .nav_droite{
+    display: inline;
+    z-index: 1;
+  }
+}
+
+// Extra large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) {
+
 }
